--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,23 @@
 certifi==14.5.14
+filterpy==0.0.17
 gnureadline==6.3.3
 ipython==3.1.0
 Jinja2==2.7.3
 jsonschema==2.4.0
 MarkupSafe==0.23
+matplotlib==1.4.3
+mistune==0.5.1
+nose==1.3.6
+numexpr==2.4.2
+numpy==1.9.2
+pandas==0.16.0
+ptyprocess==0.4
+Pygments==2.0.2
+pyparsing==2.0.3
+python-dateutil==2.4.2
+pytz==2015.2
 pyzmq==14.5.0
+scipy==0.15.1
+six==1.9.0
+terminado==0.5
 tornado==4.1
