--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,17 @@
-certifi==14.5.14
-filterpy==0.0.17
 gnureadline==6.3.3
-invoke==0.10.1
-ipython==3.1.0
+ipython==3.2.0
 Jinja2==2.7.3
-jsonschema==2.4.0
+jsonschema==2.5.1
 MarkupSafe==0.23
 matplotlib==1.4.3
-mistune==0.5.1
-nose==1.3.6
+nose==1.3.7
+numexpr==2.4.3
 numpy==1.9.2
-numexpr==2.4.2
-pandas==0.16.0
-ptyprocess==0.4
-Pygments==2.0.2
+pandas==0.16.2
 pyparsing==2.0.3
 python-dateutil==2.4.2
-pytz==2015.2
-pyzmq==14.5.0
-scipy==0.15.1
+pytz==2015.4
+pyzmq==14.7.0
 six==1.9.0
-terminado==0.5
-tornado==4.1
+tornado==4.2
+wheel==0.24.0
